# articulated_panda

./: .gitignore  CMakeLists.txt  CMakeLists.txt:Zone.Identifier  README.md  package.xml  package.xml:Zone.Identifier  setup.py  setup.py:Zone.Identifier
models/: block.urdf  bowl.stl  bowl.urdf  cabinet.urdf  door.urdf  fork.obj:Zone.Identifier  fork.stl  fork.urdf  knife.obj:Zone.Identifier  knife.stl  knife.urdf  lab_table.urdf:Zone.Identifier  mug.urdf  plate.obj:Zone.Identifier  plate.urdf  short_floor.urdf  spoon.obj:Zone.Identifier  spoon.stl  spoon.urdf
scripts/: Grasp.py  Open.py  Open_Old.py  Place.py  Plan.py  RRT.py  Spring.py  TAMP_Functions.py  domain.pddl  domainTemp.pddl  ipython.py  move_to_neutral.py  panda.py  panda_sim.py  pddl_setup.py  run.py  state.pddl  stream.pddl  streamTemp.pddl  table_domain.pddl  table_env.py  test.py  util.py  vobj.py
scripts/Placements/: Cabinet.py  Front.py  Left.py  Right.py
scripts/temp/: domain.pddl
