<?xml version="1.0"?>
<package>
    <name>YCB_Robot</name>
    <version>0.0.0</version>
    <description>
     Programming a robot to manipulate YCB objects.
    </description>
    <url type="repository">https://github.com/xRachelLux/YCB_Robot/</url>
    <maintainer email="lur@mit.edu">Rachel Lu</maintainer>
    <author email="lur@mit.edu">Rachel Lu</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <run_depend>python</run_depend>
    <run_depend>python-numpy</run_depend>
    <run_depend>tsr</run_depend>
    <run_depend>pb_robot</run_depend>
</package>
